<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".LocationOwner.Authentication.SignUp2ndClass"
android:background="@color/colorPrimary"
android:padding="10dp">

<ImageView
    android:id="@+id/signup_back_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:src="@drawable/general_back_icon"
    android:transitionName="transition_back_arrow_btn"
    app:tint="@color/black"
    tools:ignore="ContentDescription" />

<TextView
    android:id="@+id/signup_title_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_account2"
    android:textColor="@color/black"
    android:textSize="40sp"
    android:fontFamily="@font/muli_bold_italic"
    android:textAllCaps="true"
    android:layout_marginTop="20dp"
    android:transitionName="transition_title_text"/>

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_age"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <DatePicker
        android:id="@+id/age_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:spinnersShown="true"/>

</LinearLayout>

<Button
    android:id="@+id/signup_next_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/next_btn"
    android:backgroundTint="@color/teal_200"
    android:textColor="@color/black"
    android:onClick="callNextSignupScreen"
    android:layout_marginTop="15dp"
    android:elevation="5dp"
    android:transitionName="transition_next_btn"/>


</LinearLayout>