<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/home_background"
android:orientation="vertical"
tools:context=".LocationOwner.CreatePlot.CreatePlot1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/back_pressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:onClick="goBack"
        android:src="@drawable/general_back_icon"
        app:tint="@color/black"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_information"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/architects_daughter"
        android:textColor="@color/black" />

</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_type"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/radio_group_post_type_plot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_group_epost_type_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <RadioButton
                android:id="@+id/radio_group_post_type_Rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/rent" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/posting_title_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title_of_your_post_e_g_1_room_toilet_kitchen_for_rent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimension_area"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/posting_dimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_500m2_or_20m_by_30m"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/month_price_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount_here"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_by"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/radio_group_posted_by_plot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_group_posted_by_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/land_owner" />

            <RadioButton
                android:id="@+id/radio_group_posted_by_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agent" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="true"
            app:ccp_showFullName="true"
            android:padding="5dp"
            android:background="@drawable/black_border"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            app:startIconDrawable="@drawable/field_phone_number_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_information_optional"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/additional_info_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_information_optional"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/card1"
            android:onClick="goToCreatePlot2"
            android:text="@string/next_btn"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>

</LinearLayout>